--- a/config.json
+++ b/config.json
@@ -16,7 +16,7 @@
   "settings" : {
     "minOSVer" : "10.0.0",
     "minSDKVer" : "1.0.0",
-    "rotateDisabled" : true,
+    "rotateDisabled" : false,
     "autoKeyboardEnabled" : false,
     "keyboardToolbarEnabled" : false,
     "idleTimerDisabled" : false
